# moria_dungeon

./: README.md  art_bible_enemy_prompts.md  art_bible_hub_prompt.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: build.mjs  serve.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: game-logic.test.mjs  render-facing.test.mjs
web/: index.html  styles.css
web/assets/dwarf-player-sheet/: metadata.json
web/assets/elven-player-sheet/: metadata.json
web/assets/gate-stalker/: metadata.json
web/assets/rune-player-sheet/: metadata.json
web/assets/stalker-sheet/: metadata.json
web/src/: game-logic.js  layout-metrics.js  main.js  render-facing.js
