[package]
name = "vault_delver_app"
version = "0.1.0"
description = "Desktop wrapper for Vault Delver"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "vault_delver_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
